# cdk-pipeline-sagemaker

./: app.py  pyproject.toml
cdk_pipeline/: pipeline_stack.py
cdk_pipeline_sagemaker/: cdk_pipeline_sagemaker_stack.py
tests/unit/: test_cdk_pipeline_sagemaker_stack.py
